Prevented exercise items to shrink if there are too many when viewing a workout and added a gap between equipment input and created equipment container

--- a/src/components/pages/Exercise/CreateExercise.module.css
+++ b/src/components/pages/Exercise/CreateExercise.module.css
@@ -171,6 +171,7 @@ fieldset{
     flex-direction: column;
     gap: 10px;
     overflow-y: auto;
+    margin-top: 20px;
 }
 .equipment-body{
     display: flex;
